--- a/Cadastro_Dona_Florinda.html
+++ b/Cadastro_Dona_Florinda.html
@@ -50,7 +50,7 @@
       <div class="container-fluid">
         <h1>Efetue seu Cadastro</h1>
         <form
-          action="https://formsubmit.co/alvescamillagomes@gmail.com"
+          action="https://formsubmit.co/fabio.santos6446@gmail.com"
           method="POST"
         >
           <div class="form-group row">
